indico/web/client/styles/themes/indico.scss
// This file is part of Indico.
// Copyright (C) 2002 - 2024 CERN
//
// Indico is free software; you can redistribute it and/or
// modify it under the terms of the MIT License; see the
// LICENSE file for more details.

@use 'base' as *;

$indico-theme-color: #1a63a0;
$header-bg-color: $indico-theme-color !default;
$header-icon-color: $light-gray !default;
$header-text-color: $light-gray !default;
$tt-primary-color: $indico-theme-color !default;
$tt-secondary-color: #05b3b3 !default;
$tt-secondary-pastel: #a8dede !default;
$tt-nested-time-color: $light-black !default;
$tt-additional-text-color: $light-black !default;
$selected-color: $indico-blue !default;

@mixin header-logo($image, $position: 15px, $padding-left: 150px, $scale: none) {
  div.event-header {
    background: $header-bg-color url($image) left top no-repeat;
    background-position: $position;
    background-size: $scale;
    padding-left: $padding-left;
  }
}

@mixin drop-shadow {
  box-shadow: 0 2px 10px 1px rgba(50, 50, 50, 0.4);
}

@mixin ribbon($color) {
  @include transition(background-color 0.5s linear);
  border-radius: 0 2px 2px 0;
  $darkened-color: darken($color, 10%);

  background-color: $color;

  &::before {
    content: ' ';
    position: absolute;
    width: 0;
    height: 0;
    left: 0;
    top: 100%;
    border-width: 5px 5px;
    border-style: solid;
    border-color: $darkened-color $darkened-color transparent transparent;
  }
}

body {
  background: #424242;
}

.contrib-description {
  &.plain {
    white-space: pre-line;
  }
}

.item-location {
  @include ellipsis();

  border-radius: 0.2em;
  color: $tt-secondary-color;
  font-size: 1em;
  float: right;
  max-width: 200px;
  margin: 0.5rem 0.7em 0 0;

  &::before {
    color: $tt-secondary-color;
    margin-right: 0.2em;
    vertical-align: middle;
  }

  &.header-data {
    padding: 0;
  }
}

@mixin highlighted-data {
  display: inline-block;
  padding: 0 0.25em 0 0.25em;
  line-height: 1.5rem;
  background-color: $tt-primary-color;
  color: $light-gray;
}

@mixin highlighted-header-data {
  @include highlighted-data();
  @include default-border-radius();
  color: $header-text-color !important;
  background-color: lighten($header-bg-color, 5%);
}

.event-time-data {
  time {
    @include highlighted-header-data();
  }

  .date {
    color: $gray;
  }

  .timezone {
    font-size: 0.8em;
  }
}

.header-data {
  &::before {
    color: $header-icon-color;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
    margin-right: 0.4em;
    vertical-align: middle;
  }

  color: $light-gray;
  background-color: transparent;
  display: flex;
  align-items: center;
}

.event-location {
  .text {
    @include highlighted-header-data();
  }

  .icon-location {
    vertical-align: middle;
  }
}

.event-location,
.event-chairs,
.event-date {
  @extend .flexrow;

  &.event-location,
  &.event-chairs {
    margin-top: 0.5em;
  }
}

.timetable-contrib {
  .timetable-title {
    margin-right: 0.2em;
    color: $tt-primary-color;
  }
}

.speaker-list,
.chairperson-list,
.convener-list {
  margin: 0.1em 55px 0 0;

  .label {
    font-weight: bold;
  }

  .affiliation {
    font-size: 0.8em;
    opacity: 0.7;
  }
}

.chairperson-list .author {
  @include highlighted-header-data();
  margin-bottom: 2px;
}

.speaker-list,
.convener-list {
  color: $tt-additional-text-color;
}

.details .address {
  color: #aaa;
  font-size: 12px;
  text-shadow: none;
}

div.event-header {
  border-top-left-radius: $default-border-radius;
  border-top-right-radius: $default-border-radius;

  background: $header-bg-color;
  color: $header-text-color;
  font-size: 12pt;
  position: relative;

  min-height: 125px;
  margin: 0;
  padding: 10px 30px 10px;

  .event-title {
    display: flex;
    justify-content: space-between;
    gap: 0.5em;
    margin-bottom: 10px;

    h1 {
      font-size: 20pt;
      color: $header-text-color;
      font-weight: normal;
      margin-top: 10px;
    }

    .event-actions {
      display: flex;

      @media screen {
        // XXX somehow this breaks printing in chrome (23k pages)
        gap: 0.2em;
      }
      margin-top: 10px;
    }
  }

  &.round-bottom-corners {
    border-bottom-left-radius: $default-border-radius;
    border-bottom-right-radius: $default-border-radius;
  }
}

.event-header {
  @include font-family-title-light();

  .event-label {
    margin-left: 1em !important;
    text-transform: uppercase;
  }
}

.meeting-timetable,
.meeting-sub-timetable {
  list-style-type: none;
  padding: 0;
}

.item-description {
  &.session-description,
  &.break-description,
  &.contrib-description,
  &.subcontrib-description {
    padding: 0.5em 0;
  }

  .event-description {
    color: $black;
  }

  ul {
    margin-bottom: 0.5em;
  }

  @include font-family-modern-body();
  color: $light-black;
}

// Meeting Timetable-specific

ul.day-list {
  list-style-type: none;
  padding-left: 0;
  margin-left: 0;
  margin-top: 10px;
}

.day-header {
  margin-top: 25px;
  position: relative;
  text-align: center;

  .day-title {
    display: inline-block;
    font-variant: small-caps;
    font-size: 1.7em;
    color: $light-gray;
    padding: 0.5em;
  }

  a.js-go-to-day {
    display: inline-block;
    color: $gray;
    font-size: 1.4em;
    position: absolute;
    padding-bottom: 0.5em;
    right: 0;
    bottom: 0;
  }
}

.meeting-timetable {
  @include font-family-modern-body();
  @include default-border-radius();
  @include drop-shadow();

  padding: 1em 1em 0.5em 0;
  background-color: white;

  .toolbar,
  .toolbar .group {
    margin-bottom: 0;
    padding: 0;
  }

  .timetable-item {
    display: flex;

    &:not(:first-child) {
      margin-top: 1em;
    }

    .timetable-duration {
      margin: 0.5rem 0.7em 0 0;
      min-width: 4em;
      text-align: right;
      color: $dark-gray;

      &::before {
        color: $dark-gray;
        margin-right: 0.2em;
      }
    }
  }
}
/* ... */

